crates/runtime/benches/snapshots/bench__mysql_tpcds_q9.snap
---
source: crates/runtime/benches/bench.rs
assertion_line: 386
expression: records_pretty
---
+-----------+------------+------------+------------+------------+
| bucket1   | bucket2    | bucket3    | bucket4    | bucket5    |
+-----------+------------+------------+------------+------------+
| 38.702578 | 113.216289 | 187.077876 | 260.899996 | 333.936884 |
+-----------+------------+------------+------------+------------+
