crates/runtime/benches/snapshots/bench__mysql_tpcds_q93.snap
---
source: crates/runtime/benches/bench.rs
assertion_line: 386
expression: records_pretty
---
+----------------+----------+
| ss_customer_sk | sumsales |
+----------------+----------+
| 11285          | -9295.66 |
| 24851          | -8768.12 |
| 64400          | -8585.38 |
| 95121          | -6520.80 |
| 7708           | -5175.45 |
| 9945           | -3672.78 |
| 43545          | -3530.83 |
| 34416          | -2866.05 |
| 50829          | -2751.30 |
| 46488          | -2591.85 |
+----------------+----------+
