crates/runtime/benches/snapshots/bench__mysql_tpcds_q96.snap
---
source: crates/runtime/benches/bench.rs
assertion_line: 386
expression: records_pretty
---
+----------+
| count(*) |
+----------+
| 949      |
+----------+
